# ESP32-Photo-trap

./: .cproject  .gitignore  .project  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  idf_component.yml
main/include/: camera_config.h  car_model.h
main/source/: car_model.cpp  main.c  main.cpp
